[tool.poetry]
name = "FrogBot"
version = "0.1.0"
description = "FrogBot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_status", "nonebot_plugin_wordle", "nonebot_plugin_abstract", "nonebot_plugin_wordcloud", "nonebot_plugin_repeater", "nonebot_plugin_handle", "nonebot_plugin_memes"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
